2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/field.py:
	Use Value.export instead of Type.export in PresentedRow again.
	
	(Among others it avoids crashes on string types containing numeric values.)

2009-08-25  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add unique constraint to e_pytis_action_rights db table.

2009-08-24  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	Cleanup of reading DMP information from the database.
	
	- Read it explicitly, not implicitly.
	- Read it only in wx application.
	- Use given connection data instead of config.dbconnection.
	

2009-08-20  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Fix of typo in an ApplicationMenuM field after merges.

2009-08-18  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Don't use quotes in db table docstrings in db_pytis_genmenu.py.

2009-08-17  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/form/list.py:
	* tools/genmenu.py:
	Fixes in foldable DMP, make it runnable.

2009-08-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/screen.py:
	Fix retrieving objects from the resolver in DMP MultiBrowseDualForm handling.

2009-08-13  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Some fixes of dependencies in db_pytis_menu.py.

2009-08-13  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Fixes in summary access rights computation.
	

2009-08-13  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Add item types to a_pytis_actions_structure db table.

2009-08-12  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* tools/genmenu.py:
	Fix access rights summarization for plain actions.

2009-08-12  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Simplify db view ev_pytis_summary_rights_raw and avoid duplicates in it.

2009-08-12  Milan Zamazal  <pdm@brailcom.org>
